updated: footer styling

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 
     <footer class="bg-neutral-900 text-neutral-100 padding-block-900">
       <div class="container">
-        <div class="even-column">
-          <div class="flow-small">
+        <div class="even-column footer-wrapper">
+          <div class="flow-small footer-logos">
             <a href="#"><img src="./assets/images/logo.svg" alt="" /></a>
-            <ul role="list">
+            <ul role="list" class="social-icons">
               <li>
                 <a href="#"
                   ><img src="./assets/images/icon-facebook.svg" alt=""
@@ -183,13 +183,14 @@
               </ul>
             </nav>
           </div>
-          <form action="" class="flow-small">
+          <form action="" class="flow-small footer-form">
             <input type="email" placeholder="johnmadden/mail" />
-            <button class="button">Go</button>
-            <p>Copyright 2020. All Rights Reserved</p>
+            <button class="button" data="go">Go</button>
           </form>
-          <div></div>
         </div>
+        <p class="fs-300 text-neutral-400 copyright">
+          Copyright 2020. All Rights Reserved
+        </p>
       </div>
     </footer>
 
