--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    `
   </head>
   <body>
     <header class="primary-header">
@@ -45,9 +44,9 @@
     </header>
 
     <main>
-      <section class="padding-block-900 hero-section">
+      <section class="hero-section padding-block-900">
         <div class="container">
-          <div class="even-column">
+          <div class="text-center-small even-column">
             <div class="flow-large">
               <h1 class="fs-primary-heading fw-bold">
                 Bring everyone together to build better products
@@ -58,7 +57,7 @@
               </p>
               <button class="button">Get Started</button>
             </div>
-            <div>
+            <div class="hero-image margin-auto">
               <img src="./assets/images/illustration-intro.svg" />
             </div>
           </div>
@@ -128,9 +127,59 @@
       </section>
 
       <section class="padding-block-700 carousel">
-        <div class="container flow-large">
+        <div class="text-center container flow-large">
           <h2 class="fs-primary-heading fw-bold">What they've said</h2>
-          <!-- Carousel -->
+          <div class="testimonials">
+            <ul class="testimonials-list">
+              <li class="testimonial flow-large">
+                <img
+                  class="testimonials-image"
+                  src="./assets/images/avatar-anisha.png"
+                  alt=""
+                />
+                <div class="testimonials-text flow-small">
+                  <h3 class="testimonials-name fs-400 fw-bold">Anisha Li</h3>
+                  <p class="testimonials-body fs-300">
+                    “Manage has supercharged our team’s workflow. The ability to
+                    maintain visibility on larger milestones at all times keeps
+                    everyone motivated.”
+                  </p>
+                </div>
+              </li>
+              <li class="testimonial flow-large">
+                <img
+                  class="testimonials-image"
+                  src="./assets/images/avatar-ali.png"
+                  alt=""
+                />
+                <div class="testimonials-text flow-small">
+                  <h3 class="testimonials-name fs-400 fw-bold">Ali Bravo</h3>
+                  <p class="testimonials-body fs-300">
+                    “We have been able to cancel so many other subscriptions
+                    since using Manage. There is no more cross-channel confusion
+                    and everyone is much more focused.”
+                  </p>
+                </div>
+              </li>
+              <li class="testimonial flow-large">
+                <img
+                  class="testimonials-image"
+                  src="./assets/images/avatar-richard.png"
+                  alt=""
+                />
+                <div class="testimonials-text flow-small">
+                  <h3 class="testimonials-name fs-400 fw-bold">
+                    Richard Watts
+                  </h3>
+                  <p class="testimonials-body fs-300">
+                    “Manage allows us to provide structure and process. It keeps
+                    us organized and focused. I can’t stop recommending them to
+                    everyone I talk to!”
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
           <button class="button">Get Started</button>
         </div>
       </section>
